--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
             <p>En el partido, hay 10 jugadores en cada equipo en unidades de delanteros, defensas y centrocampistas, y roles aún más específicos dentro de esas unidades.</p>
             <button id="toggleButton" onclick="toggleSections()">Ver más</button>
         </div>
+            <div class="info-section">
+        <div class="info-card">
+            <h3>Tacticas del futbol</h3>
+            <p>Aprende a Jugar futball</p>
+            <button id="toggleButton" onclick="toggleSections()">Ver más</button>
+        </div>
     
         <div class="info-card">
             <h3>Reglas del Fútbol</h3>
