--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
             <p>Asi debes Jugar</p>
             <button id="toggleButton" onclick="toggleSections()">Ver más</button>
         </div>
+
+        <div class="info-card">
+            <h3>Antes de Jugar</h3>
+            <p>Asi debes Jugar</p>
+            <button id="toggleButton" onclick="toggleSections()">Ver más</button>
+        </div>
         
     <div id="rulesSection" style="display: none; padding: 20px; text-align: left;">
         <h3>Las reglas del fútbol</h3>
