--- a/index.html
+++ b/index.html
@@ -92,20 +92,20 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
         <div class="info-card">
             <h3>Tacticas del futbol</h3>
             <p>Aprende a Jugar futball</p>
-            <button id="toggleButton" onclick="toggleSections()">Ver más</button>
+            <button class="toggleButton" onclick="toggleSections()">Ver más</button>
         </div>
 
         <div class="info-card">
             <h3>Antes de Jugar</h3>
             <p>Asi debes Jugar</p>
-            <button id="toggleButton" onclick="toggleSections()">Ver más</button>
+            <button class="toggleButton" onclick="toggleSections()">Ver más</button>
         </div>
     </div> 
     <div class="info-section">
         <div class="info-card">
             <h3>Posiciones de los jugadores</h3>
             <p>En el partido, hay 10 jugadores en cada equipo en unidades de delanteros, defensas y centrocampistas, y roles aún más específicos dentro de esas unidades.</p>
-            <button id="toggleButton" onclick="toggleSections()">Ver más</button>
+            <button class="toggleButton" onclick="toggleSections()">Ver más</button>
         </div>
  
         <div id="rulesSection" style="display: none; padding: 20px; text-align: left;">
