--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
             <h3>Posiciones de los jugadores</h3>
             <p>En el partido, hay 10 jugadores en cada equipo en unidades de delanteros, defensas y centrocampistas, y roles aún más específicos dentro de esas unidades.</p>
             <button class="toggleButton" onclick="toggleSections()">Ver más</button>
+            <button onclick="showRules()">Ver reglas</button> <!-- Agregado el botón aquí -->
         </div>
  
         <div id="rulesSection" style="display: none; padding: 20px; text-align: left;">
