--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
         <div id="rulesSection" style="display: none; padding: 20px; text-align: left;">
             <h3>Las reglas del fútbol</h3>
             <p>Aprender a jugar fútbol también significa adquirir una comprensión básica de las reglas. Cuanto más juegues, practiques y veas los partidos, mejor comprenderás estas reglas, pero empezar a jugar sabiendo algo puede ayudarte a aprender rápido. Estas son las reglas básicas del fútbol.</p>
+            <button class="toggleButton" onclick="toggleSections()">Ver más</button>
             <ol>
                 <li><strong>Prohibido usar las manos:</strong> Está totalmente prohibido usar las manos en el fútbol. Va contra las reglas utilizar las manos o los brazos para manipular el balón...</li>
                 <li><strong>Fuera de juego:</strong> Este es otro término que escucharás con frecuencia en el fútbol...</li>
