--- a/index.html
+++ b/index.html
@@ -107,11 +107,15 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
             <p>En el partido, hay 10 jugadores en cada equipo en unidades de delanteros, defensas y centrocampistas, y roles aún más específicos dentro de esas unidades.</p>
             <button class="toggleButton" onclick="toggleSections()">Ver más</button>            
         </div>
+        <div class="info-card">
+            <h3>Reglas del fútbol</h3>
+            <p>Conoce las reglas básicas del fútbol.</p>
+            <button class="toggleButton" onclick="showRules()">Ver más</button>
+        </div>
  
         <div id="rulesSection" style="display: none; padding: 20px; text-align: left;">
             <h3>Las reglas del fútbol</h3>
-            <p>Aprender a jugar fútbol también significa adquirir una comprensión básica de las reglas. Cuanto más juegues, practiques y veas los partidos, mejor comprenderás estas reglas, pero empezar a jugar sabiendo algo puede ayudarte a aprender rápido. Estas son las reglas básicas del fútbol.</p>
-            <button class="toggleButton" onclick="toggleSections()">Ver más</button>
+            <p>Aprender a jugar fútbol también significa adquirir una comprensión básica de las reglas. Cuanto más juegues, practiques y veas los partidos, mejor comprenderás estas reglas, pero empezar a jugar sabiendo algo puede ayudarte a aprender rápido. Estas son las reglas básicas del fútbol.</p>            
             <ol>
                 <li><strong>Prohibido usar las manos:</strong> Está totalmente prohibido usar las manos en el fútbol. Va contra las reglas utilizar las manos o los brazos para manipular el balón...</li>
                 <li><strong>Fuera de juego:</strong> Este es otro término que escucharás con frecuencia en el fútbol...</li>
