--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
             <p>Conoce las reglas básicas del fútbol.</p>
             <button class="toggleButton" onclick="showRules()">Ver más</button>
         </div>
+    </div>
  
         <div id="rulesSection" style="display: none; padding: 20px; text-align: left;">
             <h3>Las reglas del fútbol</h3>
