--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
         <div class="time"></div>
     </div>
     <div class="info-section">
-        <div class="info-card">
+        <div class="info-card2">
             <h3>Tacticas del futbol</h3>
             <p>Aprende a Jugar futball</p>
             <button class="toggleButton" onclick="toggleSections()">Ver más</button>
@@ -159,7 +159,17 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
             </div>
         </div>
     </center>
-
+        
+    <center>
+        <div id="infoSections" class="section-container">
+            <div class="info-card2">
+                <h3>Portero</h3>
+                <p>En el fútbol, hay dos porteros en el campo, cada uno protegiendo la portería de su equipo. Esta posición requiere habilidades diferentes a las de un defensa o un delantero.</p>
+                <button><img src="image/portero.jpg" alt="Portero"></button>
+            </div>
+        </div>
+    </center>
+    
     <script src="script.js"></script>
 </body>
 </html>
