--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
 
         <div class="time"></div>
     </div>
-    <div class="info-section2">
+    <div class="info-section">
         <div class="info-card2">
             <h3>Tacticas del futbol</h3>
             <p>Aprende a Jugar futball</p>
@@ -161,7 +161,7 @@ Tradicionalmente, en un partido de fútbol hay 22 jugadores en el campo, y cada 
     </center>
         
     <center>
-        <div id="infoSections2" class="section-container">
+        <div id="infoSections" class="section-container">
             <div class="info-card2">
                 <h3>Portero</h3>
                 <p>En el fútbol, hay dos porteros en el campo, cada uno protegiendo la portería de su equipo. Esta posición requiere habilidades diferentes a las de un defensa o un delantero.</p>
