--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
          <div class="info-card">
             <h3>Calentamiento y Estiramiento</h3>
-            <p>La importancia del calentamiento y el estiramiento antes de cualquier actividad física. Estas prácticas son fundamentales para prevenir lesiones y mejorar tu rendimiento en el deporte.</p>
+            <p>La importancia del calentamiento y el estiramiento antes de cualquier actividad física son fundamentales para prevenir lesiones y mejorar tu rendimiento en el deporte.</p>
             <button class="toggleButton" onclick="toggleSections3()">Ver más</button>
         </div>
     </div> 
