--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
 			    <div class="info-card">
                 <h3>Cabeceó</h3>
-                <p>Es importante que el jugador mantenga una postura equilibrada, con el cuello firme y los ojos enfocados en el balón. El contacto debe hacerse con la frente, ya que es la parte más dura y controlada de la cabeza, permitiendo precisión y potencia en el impacto.</p>
+                <p>Es importante que el jugador mantenga una postura equilibrada, con el cuello firme y los ojos enfocados en el balón. El contacto debe hacerse con la frente, debido a que es parte más dura y controlada de la cabeza, permitiendo precisión y potencia en el impacto.</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ADmaosa1FLg?si=m0-ODO0zGh4PEDZR?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 			    <div class="info-card">
