--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 			
 			 <div class="info-card">
                 <h3>Calentamiento General Trotar</h3>
-                <p>Exploramos los beneficios de trotar, una actividad sencilla y efectiva para mejorar tu salud cardiovascular, aumentar tu resistencia y lib  </p>
+                <p>Exploramos los beneficios de trotar, una actividad sencilla y efectiva para mejorar tu salud cardiovascular y aumentar tu resistencia</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/1RnCfzDGOxk?si=gD43nlhICUeQQ3LS?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 			
