--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="info-card">
                 <h3>Delantero</h3>
                 <p>El delantero es una posición ofensiva, a veces denominada posición de "ataque".</p>
-                <button><img src="image/delantero.jpg" alt="Delantero"></button>
+                <button><img src="image/delantero.jpg" style="width: 50%; height: auto;" alt="Delantero"></button>
             </div>
         </div>
     </center>
