--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     
             <div class="info-card">
                 <h3>Delantero</h3>
-                <p>El delantero es una posición ofensiva, a veces denominada posición de "ataque".</p>
+                <p>Un delantero en el fútbol es el jugador responsable de anotar goles y se ubica en la zona ofensiva del campo. También es conocido como atacante, ariete, punta, extermo o simplemente como "nueve".</p>
                 <button><img src="image/delantero.jpg" style="width: 50%; height: auto;" alt="Delantero"></button>
             </div>
         </div>
