--- a/index.html
+++ b/index.html
@@ -259,7 +259,14 @@
 
         </div>
     </center>	
-
+<footer>
+    <p>&copy; Referencias</p>
+    <div>
+        <a href="https://www.futbollab.com/es/noticia/el-papel-crucial-del-delantero-en-el-futbol " target="_blank">Facebook</a> |
+        <a href="https://www.nike.com/us/es/a/como-jugar-futbol " target="_blank">Twitter</a> |
+        <a href="https://instagram.com/tuempresa" target="_blank">Instagram</a>
+    </div>
+</footer>
     <script src="script.js"></script>
 </body>
 </html>
