--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     
             <div class="info-card">
                 <h3>Centrocampista</h3>
-                <p>Selvadurai llama a los centrocampistas "jugadores de enlace" porque "son muy buenos distribuidores del balón".</p>
+                <p>Son los jugadores que buscan conservar la posesión del balón para su equipo y suelen alternar con mayor frecuencia entre tareas ofensivas y defensivas</p>
                 <button><img src="image/centrocampista.jpg" alt="Centrocampista"></button>
             </div>
     
@@ -262,9 +262,9 @@
 <footer>
     <p>&copy; Referencias</p>
     <div>
-        <a href="https://www.futbollab.com/es/noticia/el-papel-crucial-del-delantero-en-el-futbol " target="_blank">Facebook</a> |
-        <a href="https://www.nike.com/us/es/a/como-jugar-futbol " target="_blank">Twitter</a> |
-        <a href="https://instagram.com/tuempresa" target="_blank">Instagram</a>
+        <a href="https://www.futbollab.com/es/noticia/el-papel-crucial-del-delantero-en-el-futbol " target="_blank">Futbollab</a> |
+        <a href="https://www.nike.com/us/es/a/como-jugar-futbol " target="_blank">Nike</a> |
+        <a href="https://instagram.com/tuempresa" target="_blank">IFAB</a>
     </div>
 </footer>
     <script src="script.js"></script>
