--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <div>
         <a href="https://www.futbollab.com/es/noticia/el-papel-crucial-del-delantero-en-el-futbol " target="_blank">Futbollab</a> |
         <a href="https://www.nike.com/us/es/a/como-jugar-futbol " target="_blank">Nike</a> |
-        <a href="https://instagram.com/tuempresa" target="_blank">IFAB</a>
+        <a href="https://thepfsa.co.uk/es/how-to-play-football/ " target="_blank">PFSA</a>
     </div>
 </footer>
     <script src="script.js"></script>
