--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 <footer>
     <p>&copy; Referencias</p>
     <div>
-        <a href="https://www.futbollab.com/es/noticia/el-papel-crucial-del-delantero-en-el-futbol " target="_blank">Futbollab</a> |
+        <a href=" https://cronicaglobal.elespanol.com/culemania/culemaniacos/20240723/el-nuevo-camp-nou-tercer-estadio-capacidad/872662738_0.html" target="_blank">Culémania</a> |
         <a href="https://www.nike.com/us/es/a/como-jugar-futbol " target="_blank">Nike</a> |
         <a href="https://thepfsa.co.uk/es/how-to-play-football/ " target="_blank">PFSA</a>
     </div>
