--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
     <div>
         <a href=" https://cronicaglobal.elespanol.com/culemania/culemaniacos/20240723/el-nuevo-camp-nou-tercer-estadio-capacidad/872662738_0.html" target="_blank">Culémania</a> |
         <a href="https://www.nike.com/us/es/a/como-jugar-futbol " target="_blank">Nike</a> |
-        <a href="https://thepfsa.co.uk/es/how-to-play-football/ " target="_blank">PFSA</a>
+        <a href="https://thepfsa.co.uk/es/how-to-play-football/ " target="_blank">PFSA</a> |
+	<a href="https://www.futbollab.com/es/noticia/el-papel-crucial-del-delantero-en-el-futbol" target="_blank">Futballab</a>    
     </div>
 </footer>
     <script src="script.js"></script>
